@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2019 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,9 +25,6 @@ import org.jkiss.dbeaver.model.impl.AbstractDescriptor;
 import org.jkiss.dbeaver.model.impl.PropertyDescriptor;
 import org.jkiss.dbeaver.model.preferences.DBPPropertyDescriptor;
 
-import java.util.ArrayList;
-import java.util.List;
-
 /**
  * DataFormatterDescriptor
  */
@@ -40,7 +37,7 @@ public class DataFormatterDescriptor extends AbstractDescriptor
     private String id;
     private String name;
     private String description;
-    private List<DBPPropertyDescriptor> properties = new ArrayList<>();
+    private DBPPropertyDescriptor[] properties;
     private DBDDataFormatterSample sample;
     private ObjectType formatterType;
 
@@ -52,14 +49,11 @@ public class DataFormatterDescriptor extends AbstractDescriptor
         this.formatterType = new ObjectType(config.getAttribute("class"));
         this.name = config.getAttribute("label");
         this.description = config.getAttribute("description");
+        this.properties = PropertyDescriptor.extractPropertyGroups(config);
 
-        IConfigurationElement[] propElements = config.getChildren(PropertyDescriptor.TAG_PROPERTY_GROUP);
-        for (IConfigurationElement prop : propElements) {
-            properties.addAll(PropertyDescriptor.extractProperties(prop));
-        }
         Class<?> objectClass = getObjectClass(config.getAttribute("sampleClass"));
         try {
-            sample = (DBDDataFormatterSample)objectClass.newInstance();
+            sample = (DBDDataFormatterSample)objectClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             log.error("Can't instantiate data formatter '" + getId() + "' sample");
         }
@@ -85,7 +79,7 @@ public class DataFormatterDescriptor extends AbstractDescriptor
         return sample;
     }
 
-    public List<DBPPropertyDescriptor> getProperties() {
+    public DBPPropertyDescriptor[] getProperties() {
         return properties;
     }
 
