@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2019 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,6 +25,7 @@ import org.jkiss.dbeaver.ModelPreferences;
 import org.jkiss.dbeaver.bundle.ModelActivator;
 import org.jkiss.dbeaver.model.impl.app.ApplicationDescriptor;
 import org.jkiss.dbeaver.model.impl.app.ApplicationRegistry;
+import org.jkiss.dbeaver.runtime.IVariableResolver;
 import org.jkiss.utils.Base64;
 import org.jkiss.utils.CommonUtils;
 import org.jkiss.utils.StandardConstants;
@@ -37,7 +38,9 @@ import java.math.BigInteger;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 import java.text.NumberFormat;
 import java.text.ParseException;
@@ -53,7 +56,7 @@ public class GeneralUtils {
 
     private static final Log log = Log.getLog(GeneralUtils.class);
 
-    public static final String UTF8_ENCODING = "UTF-8";
+    public static final String UTF8_ENCODING = StandardCharsets.UTF_8.name();
     public static final String DEFAULT_ENCODING = UTF8_ENCODING;
 
     public static final Charset UTF8_CHARSET = Charset.forName(UTF8_ENCODING);
@@ -132,11 +135,14 @@ public class GeneralUtils {
     }
 
     public static String convertToString(byte[] bytes, int offset, int length) {
+        if (length == 0) {
+            return "";
+        }
         char[] chars = new char[length];
         for (int i = offset; i < offset + length; i++) {
             int b = bytes[i];
-            if (b < 0) b = -b + 127;
-            if (b < 32) b = 32;
+            if (b < 0) b = 256 + b;
+            if (b < 32 || (b >= 0x7F && b <= 0xA0)) b = 32;
             chars[i - offset] = (char) b;
         }
         return new String(chars);
@@ -201,21 +207,21 @@ public class GeneralUtils {
             } else if (valueType == Boolean.class || valueType == Boolean.TYPE) {
                 return Boolean.valueOf(value);
             } else if (valueType == Long.class) {
-                return Long.valueOf(value);
+                return Long.valueOf(normalizeIntegerString(value));
             } else if (valueType == Long.TYPE) {
-                return Long.parseLong(value);
+                return Long.parseLong(normalizeIntegerString(value));
             } else if (valueType == Integer.class) {
-                return new Integer(value);
+                return Integer.valueOf(normalizeIntegerString(value));
             } else if (valueType == Integer.TYPE) {
-                return Integer.parseInt(value);
+                return Integer.parseInt(normalizeIntegerString(value));
             } else if (valueType == Short.class) {
-                return Short.valueOf(value);
+                return Short.valueOf(normalizeIntegerString(value));
             } else if (valueType == Short.TYPE) {
-                return Short.parseShort(value);
+                return Short.parseShort(normalizeIntegerString(value));
             } else if (valueType == Byte.class) {
-                return Byte.valueOf(value);
+                return Byte.valueOf(normalizeIntegerString(value));
             } else if (valueType == Byte.TYPE) {
-                return Byte.parseByte(value);
+                return Byte.parseByte(normalizeIntegerString(value));
             } else if (valueType == Double.class) {
                 return Double.valueOf(value);
             } else if (valueType == Double.TYPE) {
@@ -225,7 +231,7 @@ public class GeneralUtils {
             } else if (valueType == Float.TYPE) {
                 return Float.parseFloat(value);
             } else if (valueType == BigInteger.class) {
-                return new BigInteger(value);
+                return new BigInteger(normalizeIntegerString(value));
             } else if (valueType == BigDecimal.class) {
                 return new BigDecimal(value);
             } else {
@@ -235,6 +241,11 @@ public class GeneralUtils {
             log.error(e);
             return value;
         }
+    }
+
+    private static String normalizeIntegerString(String value) {
+        int divPos = value.lastIndexOf('.');
+        return divPos == -1 ? value : value.substring(0, divPos);
     }
 
     public static Throwable getRootCause(Throwable ex) {
@@ -304,6 +315,16 @@ public class GeneralUtils {
     }
 
     @NotNull
+    public static String getPlainVersion(String versionStr) {
+        try {
+            Version version = new Version(versionStr);
+            return version.getMajor() + "." + version.getMinor() + "." + version.getMicro();
+        } catch (Exception e) {
+            return versionStr;
+        }
+    }
+
+    @NotNull
     public static String getPlainVersion() {
         Version version = getProductVersion();
         return version.getMajor() + "." + version.getMinor() + "." + version.getMicro();
@@ -357,8 +378,13 @@ public class GeneralUtils {
         return calendar.getTime();
     }
 
-    public interface IVariableResolver {
-        String get(String name);
+    public static String getExpressionParseMessage(Exception e) {
+        String message = e.getMessage();
+        if (message == null) {
+            return e.getClass().getName();
+        }
+        int divPos = message.indexOf('@');
+        return divPos == -1 ? message : message.substring(divPos + 1);
     }
 
     public interface IParameterHandler {
@@ -386,6 +412,13 @@ public class GeneralUtils {
         return replaceVariables(string, System::getenv);
     }
 
+    public static String replaceSystemPropertyVariables(String string) {
+        if (string == null) {
+            return null;
+        }
+        return replaceVariables(string, System::getProperty);
+    }
+
     @NotNull
     public static String variablePattern(String name) {
         return "${" + name + "}";
@@ -397,32 +430,47 @@ public class GeneralUtils {
     }
 
     @NotNull
-    public static String stripVariablePattern(String pattern) {
-        if (isVariablePattern(pattern)) {
-            return pattern.substring(2, pattern.length() - 1);
-        }
-        return pattern;
-    }
-
-    @NotNull
     public static String generateVariablesLegend(@NotNull String[][] vars) {
+        String[] varPatterns = new String[vars.length];
+        int patternMaxLength = 0;
+        for (int i = 0; i < vars.length; i++) {
+            varPatterns[i] = GeneralUtils.variablePattern(vars[i][0]);
+            patternMaxLength = Math.max(patternMaxLength, varPatterns[i].length());
+        }
         StringBuilder text = new StringBuilder();
-        for (String[] var : vars) {
-            text.append(GeneralUtils.variablePattern(var[0])).append("\t- ").append(var[1]).append("\n");
+        for (int i = 0; i < vars.length; i++) {
+            text.append(varPatterns[i]);
+            // Indent
+            for (int k = 0; k < patternMaxLength - varPatterns[i].length(); k++) {
+                text.append(' ');
+            }
+            text.append(" - ").append(vars[i][1]).append("\n");
         }
         return text.toString();
     }
 
     @NotNull
     public static String replaceVariables(@NotNull String string, IVariableResolver resolver) {
+        if (CommonUtils.isEmpty(string)) {
+            return string;
+        }
+        // We save resolved vars here to avoid resolve recursive cycles
+        List<String> resolvedVars = null;
         try {
             Matcher matcher = VAR_PATTERN.matcher(string);
             int pos = 0;
             while (matcher.find(pos)) {
                 pos = matcher.end();
                 String varName = matcher.group(2);
+                if (resolvedVars != null && resolvedVars.contains(varName)) {
+                    continue;
+                }
                 String varValue = resolver.get(varName);
                 if (varValue != null) {
+                    if (resolvedVars == null) {
+                        resolvedVars = new ArrayList<>();
+                        resolvedVars.add(varName);
+                    }
                     if (matcher.start() == 0 && matcher.end() == string.length() - 1) {
                         string = varValue;
                     } else {
@@ -625,6 +673,10 @@ public class GeneralUtils {
         return Platform.getOS().contains("win32");
     }
 
+    public static boolean isMacOS() {
+        return Platform.getOS().contains("macos");
+    }
+
     /////////////////////////////////////////////////////////////////////////
     // Adapters
     // Copy-pasted from org.eclipse.core.runtime.Adapters to support Eclipse Mars (#46667)
@@ -684,6 +736,23 @@ public class GeneralUtils {
             result = AdapterManager.getDefault().getAdapter(sourceObject, adapterId);
         }
         return result;
+    }
+
+
+    public static byte[] getBytesFromUUID(UUID uuid) {
+        ByteBuffer bb = ByteBuffer.wrap(new byte[16]);
+        bb.putLong(uuid.getMostSignificantBits());
+        bb.putLong(uuid.getLeastSignificantBits());
+
+        return bb.array();
+    }
+
+    public static UUID getUUIDFromBytes(byte[] bytes) throws IllegalArgumentException {
+        if (bytes.length < 16) {
+            throw new IllegalArgumentException("UUID length must be at least 16 bytes (actual length = " + bytes.length + ")");
+        }
+        ByteBuffer byteBuffer = ByteBuffer.wrap(bytes);
+        return new UUID(byteBuffer.getLong(), byteBuffer.getLong());
     }
 
 }
